force-app/main/default/objects/NCMT_Security_Detail__c/NCMT_Security_Detail__c.object-meta.xml
<CustomObject>
    <description>Security Detail</description>
    <label>Security Cost Detail</label>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>Security Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Cost Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>