force-app/main/default/objects/NCMT_Security_Detail__c/fields/Gross_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Gross_Sq_Ft__c</fullName>
    <label>Total Units</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>