force-app/main/default/objects/NCMT_Security_Detail__c/fields/Project_Cost_Summary__c.field-meta.xml
<CustomField>
    <fullName>Project_Cost_Summary__c</fullName>
    <label>Project Cost Summary</label>
    <referenceTo>NCMT_Project_Cost_Summary__c</referenceTo>
    <relationshipLabel>Security Cost Details</relationshipLabel>
    <relationshipName>Security_Cost_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>