force-app/main/default/objects/NCMT_Security_Detail__c/fields/Security_Criterion__c.field-meta.xml
<CustomField>
    <fullName>Security_Criterion__c</fullName>
    <formula>Security_Parameter__r.Security_Criterion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Security Criterion</label>
    <type>Text</type>
</CustomField>