force-app/main/default/objects/NCMT_Security_Detail__c/fields/Security_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Security_Parameter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Security Parameter</label>
    <referenceTo>NCMT_Security_Parameters__c</referenceTo>
    <relationshipLabel>Security Cost Details</relationshipLabel>
    <relationshipName>Security_Cost_Details</relationshipName>
    <type>Lookup</type>
</CustomField>