force-app/main/default/objects/NCMT_Security_Detail__c/fields/Total_Cost_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Adjusted__c</fullName>
    <formula>IF( TEXT(Project_Cost_Summary__r.Project_Name__r.Project_type__c) == &apos;New Construction&apos;,Total_Cost__c * Project_Cost_Summary__r.Project_Name__r.Core_Shell_Adjustment_Factor__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Adjusted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>