force-app/main/default/objects/NCMT_Security_Detail__c/fields/Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Unit Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>